# oogc-resource-index

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/oogc_resource_index/: __init__.py  auth_downloader.py  cli.py  constants.py  crawler.py  dataset.py  incremental.py  models.py  parser.py  seafile.py
tests/: test_auth_downloader.py  test_cli.py  test_crawler.py  test_dataset_importer.py  test_incremental.py  test_parser.py
