[project]
name = "oogc-resource-index"
version = "0.1.0"
description = "Small OOGC resource metadata crawler and export tool"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    { name = "Sakina", email = "soffits@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "typer>=0.25.0",
]

[project.scripts]
oogc-resource-index = "oogc_resource_index.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
